--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "althinect/filament-spatie-roles-permissions": "^2.2",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.3.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-permission": "^6.10"
+        "spatie/laravel-permission": "^6.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
